[tool.poetry]
name = "recon-service"
version = "0.1.0"
description = "Reconcilation service"
authors = ["saravanan"]
readme = "README.md"
packages = [{include = "recon_service"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.85.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
